src/test/deca/context/valid/created/sans_objet/condition_if.deca
// Description:
//    Condition  booléenne
//
// Resultats:
//    doit passer
//
// Historique:
//    cree le 01/01/2024

{
   boolean a;
   if(a){
      println("c'est ok");
   }
}
