src/test/deca/context/invalid/created/sans_objet/expr_non_imprimable.deca
// Description:
//    Expression non imprimable
//
// Resultats:
//    Ligne 14: variable non declarée.
// 
// Historique:
//    cree le 01/01/2024

{
   boolean a;
   // Doit etre refusé.
   println(a);
}
